--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,15 @@
 {
-    "version":2,
-    "builds": [
-        {
-            "src":".backend/index.py",
-            "use": "@vercel/python",
-            "config":{"runtime":"python3.8"}
-        }
-    ],
-    "routes": [
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "backend/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "backend/index.py"
+    }
+  ]
 }
