--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ executing==2.2.1
 Flask==3.1.2
 flask-cors==6.0.2
 fonttools==4.61.1
+gunicorn==25.1.0
 ipykernel==7.2.0
 ipython==9.10.0
 ipython_pygments_lexers==1.1.1
